src/test/ui/consts/const-len-underflow-separate-spans.stderr
error[E0080]: referenced constant has errors
  --> $DIR/const-len-underflow-separate-spans.rs:20:17
   |
LL | const LEN: usize = ONE - TWO;
   |                    --------- attempt to subtract with overflow
...
LL |     let a: [i8; LEN] = unimplemented!();
   |                 ^^^

error[E0080]: could not evaluate constant
  --> $DIR/const-len-underflow-separate-spans.rs:20:17
   |
LL |     let a: [i8; LEN] = unimplemented!();
   |                 ^^^ referenced constant has errors

error[E0080]: referenced constant has errors
  --> $DIR/const-len-underflow-separate-spans.rs:20:12
   |
LL | const LEN: usize = ONE - TWO;
   |                    --------- attempt to subtract with overflow
...
LL |     let a: [i8; LEN] = unimplemented!();
   |            ^^^^^^^^^

error[E0080]: could not evaluate constant expression
  --> $DIR/const-len-underflow-separate-spans.rs:20:12
   |
LL |     let a: [i8; LEN] = unimplemented!();
   |            ^^^^^---^
   |                 |
   |                 referenced constant has errors

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0080`.
